bat.string1.lessons.bat.string1.StringX.scala.error
stringX:5: error: reassignment to val
    if (str.charAt(i) != 'x') {s = s + str.charAt(i).toString}
                                 ^