bat.string1.lessons.bat.string1.StringX.scala.code
def stringX(str:String):String = {
  val n = str.length
  val s = "x"
  for (i <- 1 to n-2) {
    if (str.charAt(i) != 'x') {s = s + str.charAt(i).toString}
  }
  return "s" + "x"}